terraforms/elasticIP.tf
resource "aws_eip" "nat_eip2" {
  instance = null  # Replace with your EC2 instance ID
}
